<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/delivery"
        android:textColor="@color/service_dark_green"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/service"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <View
        android:id="@+id/view2"
        android:layout_width="415dp"
        android:layout_height="287dp"
        android:background="@color/service_blight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <Spinner
        android:id="@+id/spPickup"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@color/light_green"
        android:entries="@array/pickup_locations"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@color/light_green"
        android:entries="@array/delivery_category"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <EditText
        android:id="@+id/txtWeight"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@color/light_green"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <View
        android:id="@+id/view3"
        android:layout_width="415dp"
        android:layout_height="336dp"
        android:background="@color/service_dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etRAddress"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@color/dark_green"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/address"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

    <EditText
        android:id="@+id/etRName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@color/dark_green"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/receiver_name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <EditText
        android:id="@+id/etRMobile"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@color/dark_green"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/reset_red"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reset"
        android:textColor="@color/reset_red_font"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/light_green"
        android:fontFamily="sans-serif-medium"
        android:text="@string/submit"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="91dp"
        android:contentDescription="@string/parcel_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/parcel" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/grams"
        android:textColor="#FDFDFD"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/txtWeight"
        app:layout_constraintTop_toBottomOf="@+id/spPickup" />


</androidx.constraintlayout.widget.ConstraintLayout>