<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IT21277504.MainActivity">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="413dp"
        android:layout_height="310dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/male" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="256dp"
        android:layout_height="65dp"
        android:background="@drawable/edit_text"
        android:text="@string/best_package_delivery_just_for_you"
        android:textAlignment="center"
        android:textColor="#1A727A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="376dp"
        android:layout_height="32dp"
        android:text="@string/we_provide_to_your_doorstep_parcels_and_goods_at_anytime."
        android:textColor="#1A727A"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="165dp"
        android:layout_height="53dp"
        android:text="@string/welcome"
        android:textColor="#1A727A"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.027" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btGetStarted"
        android:layout_width="216dp"
        android:layout_height="72dp"
        android:background="@drawable/edit_button"
        android:text="@string/get_started"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.063" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btConGuest"
        android:layout_width="216dp"
        android:layout_height="72dp"
        android:background="@drawable/edit_button"
        android:text="@string/con_guest"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btGetStarted"
        app:layout_constraintVertical_bias="0.591" />


</androidx.constraintlayout.widget.ConstraintLayout>